--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 04:05:09 2018</p>
+         Last Run: Sun Jul 15 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>2</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -49,8 +49,8 @@
                         <td>40</td>
                         <td>3</td>
                         <td>6</td>
-                        <td>NNW</td>
-                        <td>11</td>
+                        <td>NW</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -58,11 +58,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>4</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>16</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>12</td>
+                        <td>NNE</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>7</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>35</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -216,8 +216,8 @@
                "data":[
                  "48",
                  "40",
-                 "34",
-                 "29",
+                 "35",
+                 "30",
                  "26"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "11",
-                 "16",
-                 "12",
-                 "35"
+                 "9",
+                 "15",
+                 "14",
+                 "14",
+                 "36"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 04:05:09 2018</p>
+         Last Run: Sun Jul 15 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 04:05:09 2018</p>
+         Last Run: Sun Jul 15 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -472,24 +472,24 @@
                         <td>Clear</td>
                         <td>28</td>
                         <td>28</td>
-                        <td>4</td>
+                        <td>0</td>
                         <td>31</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>26</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>27</td>
                         <td>27</td>
-                        <td>4</td>
-                        <td>37</td>
+                        <td>0</td>
+                        <td>36</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>33</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -501,7 +501,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>41</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,8 +609,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
+                 "0",
+                 "0",
                  "1"
                ]
              },
@@ -620,7 +620,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "31",
-                 "37",
+                 "36",
                  "45"
                ]
              },
@@ -629,9 +629,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "33",
-                 "41"
+                 "24",
+                 "30",
+                 "38"
                ]
              }
            ]
@@ -648,7 +648,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 04:05:09 2018</p>
+         Last Run: Sun Jul 15 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -867,7 +867,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 04:05:09 2018</p>
+         Last Run: Sun Jul 15 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
