--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 05:05:04 2018</p>
+         Last Run: Sun Jul 15 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -36,9 +36,9 @@
                         <td>0</td>
                         <td>48</td>
                         <td>2</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -49,8 +49,8 @@
                         <td>40</td>
                         <td>3</td>
                         <td>6</td>
-                        <td>NW</td>
-                        <td>15</td>
+                        <td>WNW</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -62,19 +62,19 @@
                         <td>4</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>14</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
                         <td>30</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>NNE</td>
-                        <td>14</td>
+                        <td>NE</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>7</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>36</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "15",
-                 "14",
-                 "14",
-                 "36"
+                 "13",
+                 "16",
+                 "20",
+                 "30",
+                 "41"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 05:05:04 2018</p>
+         Last Run: Sun Jul 15 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 05:05:04 2018</p>
+         Last Run: Sun Jul 15 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -473,7 +473,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
@@ -481,15 +481,15 @@
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>30</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -497,11 +497,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>1</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -619,9 +619,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "36",
-                 "45"
+                 "32",
+                 "37",
+                 "46"
                ]
              },
              {
@@ -630,8 +630,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "24",
-                 "30",
-                 "38"
+                 "29",
+                 "37"
                ]
              }
            ]
@@ -648,7 +648,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 05:05:04 2018</p>
+         Last Run: Sun Jul 15 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -673,7 +673,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>1</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>3</td>
                         <td>14</td>
                         <td>SE</td>
@@ -684,8 +684,8 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>3</td>
-                        <td>40</td>
+                        <td>6</td>
+                        <td>39</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
@@ -696,10 +696,10 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>5</td>
-                        <td>43</td>
+                        <td>4</td>
+                        <td>42</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
                         <td>32</td>
                      </tr>
@@ -708,11 +708,11 @@
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>7</td>
+                        <td>3</td>
                         <td>48</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>ENE</td>
+                        <td>E</td>
                         <td>24</td>
                      </tr>
                   </tbody>
@@ -826,9 +826,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "3",
-                 "5",
-                 "7"
+                 "6",
+                 "4",
+                 "3"
                ]
              },
              {
@@ -836,9 +836,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "38",
                  "39",
-                 "40",
-                 "43",
+                 "42",
                  "48"
                ]
              },
@@ -867,7 +867,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 05:05:04 2018</p>
+         Last Run: Sun Jul 15 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -889,26 +889,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>0</td>
+                        <td>57</td>
                         <td>3</td>
-                        <td>58</td>
-                        <td>3</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>14</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>4</td>
+                        <td>0</td>
                         <td>50</td>
                         <td>4</td>
-                        <td>10</td>
-                        <td>WNW</td>
-                        <td>15</td>
+                        <td>8</td>
+                        <td>NW</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -916,23 +916,23 @@
                         <td>20</td>
                         <td>20</td>
                         <td>3</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>6</td>
-                        <td>10</td>
-                        <td>WNW</td>
-                        <td>15</td>
+                        <td>8</td>
+                        <td>NNW</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>4</td>
-                        <td>37</td>
+                        <td>3</td>
+                        <td>40</td>
                         <td>7</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>16</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -940,11 +940,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>4</td>
-                        <td>35</td>
+                        <td>38</td>
                         <td>7</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>17</td>
+                        <td>8</td>
+                        <td>SE</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -990,7 +990,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "18",
+                 "17",
                  "19",
                  "20",
                  "21",
@@ -1003,7 +1003,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "18",
+                 "17",
                  "19",
                  "20",
                  "21",
@@ -1060,10 +1060,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "0",
+                 "0",
                  "3",
-                 "4",
                  "3",
-                 "4",
                  "4"
                ]
              },
@@ -1072,11 +1072,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
+                 "57",
                  "50",
-                 "42",
-                 "37",
-                 "35"
+                 "43",
+                 "40",
+                 "38"
                ]
              },
              {
@@ -1084,11 +1084,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
-                 "15",
-                 "15",
-                 "16",
-                 "17"
+                 "20",
+                 "20",
+                 "19",
+                 "18",
+                 "18"
                ]
              }
            ]
