--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 06:05:04 2018</p>
+         Last Run: Sun Jul 15 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>2</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>3</td>
                         <td>6</td>
                         <td>WNW</td>
-                        <td>16</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "16",
-                 "19",
+                 "18",
                  "21",
                  "22",
                  "24"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "16",
-                 "19",
+                 "18",
                  "21",
                  "22",
                  "24"
@@ -214,8 +214,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
-                 "40",
+                 "49",
+                 "41",
                  "35",
                  "30",
                  "26"
@@ -226,8 +226,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
-                 "16",
+                 "26",
+                 "29",
                  "20",
                  "30",
                  "41"
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 06:05:04 2018</p>
+         Last Run: Sun Jul 15 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -287,7 +287,7 @@
                         <td>0</td>
                         <td>23</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 06:05:04 2018</p>
+         Last Run: Sun Jul 15 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -469,19 +469,19 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>24</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
@@ -489,7 +489,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>29</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -500,8 +500,8 @@
                         <td>46</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
-                        <td>37</td>
+                        <td>ESE</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -619,7 +619,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
+                 "31",
                  "37",
                  "46"
                ]
@@ -629,9 +629,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "29",
-                 "37"
+                 "36",
+                 "41",
+                 "45"
                ]
              }
            ]
@@ -648,7 +648,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 06:05:04 2018</p>
+         Last Run: Sun Jul 15 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -672,20 +672,20 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>38</td>
                         <td>3</td>
-                        <td>14</td>
-                        <td>SE</td>
-                        <td>39</td>
+                        <td>13</td>
+                        <td>SSE</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>6</td>
-                        <td>39</td>
+                        <td>18</td>
+                        <td>40</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
@@ -693,27 +693,27 @@
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
-                        <td>42</td>
+                        <td>34</td>
+                        <td>43</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>32</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
                         <td>3</td>
                         <td>48</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>E</td>
-                        <td>24</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -825,9 +825,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "6",
-                 "4",
+                 "2",
+                 "18",
+                 "34",
                  "3"
                ]
              },
@@ -837,8 +837,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "38",
-                 "39",
-                 "42",
+                 "40",
+                 "43",
                  "48"
                ]
              },
@@ -847,10 +847,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "33",
                  "39",
-                 "39",
-                 "32",
-                 "24"
+                 "54",
+                 "48"
                ]
              }
            ]
@@ -867,7 +867,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 06:05:04 2018</p>
+         Last Run: Sun Jul 15 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
