--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 14:05:04 2018</p>
+         Last Run: Sun Jul 15 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 14:05:04 2018</p>
+         Last Run: Sun Jul 15 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>47</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -246,23 +246,23 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>53</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>48</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>53</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -372,7 +372,7 @@
                "data":[
                  "0",
                  "0",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -380,8 +380,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
-                 "39",
+                 "35",
+                 "40",
                  "48"
                ]
              },
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "40",
                  "47",
-                 "53",
-                 "53"
+                 "49"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 14:05:04 2018</p>
+         Last Run: Sun Jul 15 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -430,51 +430,51 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>4</td>
-                        <td>41</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>44</td>
+                        <td>50</td>
                         <td>3</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SE</td>
-                        <td>59</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>8</td>
-                        <td>42</td>
+                        <td>Partly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>6</td>
+                        <td>52</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SE</td>
-                        <td>62</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>Partly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>9</td>
-                        <td>44</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>62</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>5</td>
-                        <td>48</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,10 +519,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
-                 "24",
-                 "24",
-                 "23"
+                 "23",
+                 "22",
+                 "22",
+                 "21"
                ]
              },
              {
@@ -531,10 +531,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
-                 "24",
-                 "24",
-                 "23"
+                 "23",
+                 "22",
+                 "22",
+                 "21"
                ]
              }
            ]
@@ -586,8 +586,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "8",
+                 "44",
+                 "6",
                  "9",
                  "5"
                ]
@@ -597,10 +597,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
-                 "42",
-                 "44",
-                 "48"
+                 "50",
+                 "52",
+                 "53",
+                 "56"
                ]
              },
              {
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "62",
-                 "62",
-                 "54"
+                 "55",
+                 "54",
+                 "57",
+                 "57"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 14:05:04 2018</p>
+         Last Run: Sun Jul 15 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -662,10 +662,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>4</td>
                         <td>8</td>
                         <td>NW</td>
@@ -677,7 +677,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>3</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>6</td>
                         <td>8</td>
                         <td>N</td>
@@ -689,7 +689,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>3</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>7</td>
                         <td>8</td>
                         <td>N</td>
@@ -701,7 +701,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>4</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>7</td>
                         <td>8</td>
                         <td>NE</td>
@@ -752,7 +752,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
-                 "19",
+                 "18",
                  "20",
                  "21",
                  "22"
@@ -765,7 +765,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
-                 "19",
+                 "18",
                  "20",
                  "21",
                  "22"
@@ -834,10 +834,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "46",
-                 "42",
-                 "40",
-                 "39"
+                 "47",
+                 "43",
+                 "41",
+                 "40"
                ]
              },
              {
