--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 19:05:17 2018</p>
+         Last Run: Sun Jul 15 20:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -58,10 +58,10 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -182,7 +182,7 @@
                "data":[
                  "22",
                  "24",
-                 "29"
+                 "30"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 19:05:17 2018</p>
+         Last Run: Sun Jul 15 20:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -234,7 +234,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
@@ -258,7 +258,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>1</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -380,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
+                 "34",
                  "39",
-                 "47"
+                 "46"
                ]
              },
              {
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 19:05:17 2018</p>
+         Last Run: Sun Jul 15 20:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -431,8 +431,8 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>43</td>
                         <td>50</td>
                         <td>3</td>
@@ -446,7 +446,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
@@ -457,8 +457,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>36</td>
-                        <td>52</td>
+                        <td>37</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "22",
                  "22",
                  "22",
                  "21"
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "22",
                  "22",
                  "22",
                  "21"
@@ -588,7 +588,7 @@
                "data":[
                  "43",
                  "2",
-                 "36",
+                 "37",
                  "8"
                ]
              },
@@ -598,8 +598,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
-                 "51",
                  "52",
+                 "53",
                  "55"
                ]
              },
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 19:05:17 2018</p>
+         Last Run: Sun Jul 15 20:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
