--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 15:05:20 2018</p>
+         Last Run: Mon Jul 16 16:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>7</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>21</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>0</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -61,7 +61,7 @@
                         <td>29</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -181,7 +181,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "18",
-                 "24",
+                 "21",
                  "29"
                ]
              },
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "0",
+                 "13",
+                 "9",
                  "0"
                ]
              }
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 15:05:20 2018</p>
+         Last Run: Mon Jul 16 16:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -234,12 +234,12 @@
                         <td>Partly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>30</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -251,7 +251,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>35</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -259,11 +259,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>4</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -371,7 +371,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "2",
                  "4",
                  "4"
                ]
@@ -383,7 +383,7 @@
                "data":[
                  "30",
                  "34",
-                 "41"
+                 "42"
                ]
              },
              {
@@ -391,9 +391,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "35",
-                 "49"
+                 "49",
+                 "33",
+                 "48"
                ]
              }
            ]
@@ -410,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 15:05:20 2018</p>
+         Last Run: Mon Jul 16 16:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -434,24 +434,24 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>45</td>
-                        <td>53</td>
+                        <td>46</td>
+                        <td>54</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>57</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>43</td>
-                        <td>53</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>42</td>
+                        <td>54</td>
                         <td>2</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -459,10 +459,10 @@
                         <td>21</td>
                         <td>21</td>
                         <td>45</td>
-                        <td>55</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>SE</td>
+                        <td>13</td>
+                        <td>ESE</td>
                         <td>56</td>
                      </tr>
                      <tr>
@@ -470,7 +470,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>41</td>
+                        <td>36</td>
                         <td>60</td>
                         <td>0</td>
                         <td>13</td>
@@ -521,7 +521,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "21",
+                 "22",
                  "21",
                  "20"
                ]
@@ -533,7 +533,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "21",
+                 "22",
                  "21",
                  "20"
                ]
@@ -587,10 +587,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "46",
+                 "42",
                  "45",
-                 "43",
-                 "45",
-                 "41"
+                 "36"
                ]
              },
              {
@@ -598,9 +598,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "53",
-                 "55",
+                 "54",
+                 "54",
+                 "58",
                  "60"
                ]
              },
@@ -609,8 +609,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "51",
+                 "56",
+                 "50",
                  "56",
                  "55"
                ]
@@ -629,7 +629,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 15:05:20 2018</p>
+         Last Run: Mon Jul 16 16:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
